--- a/www/framework/myStyle.css
+++ b/www/framework/myStyle.css
@@ -1,5 +1,3 @@
-/* File: myStyle.css */
-
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -39,7 +37,28 @@ tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
+.button-group {
+    line-height: 2em;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    box-sizing: border-box; /* Ensures padding doesn't affect overall width */
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background: #f4f4f4;
+    color: #333;
+
+}
+
+
 .button-group button {
+    margin-top: 20px;
+    margin-left: 5px;
     padding: 10px 20px;
     margin-right: 10px;
     border: none;
@@ -48,8 +67,16 @@ tr:nth-child(even) {
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    vertical-align: middle; /* Aligns buttons with text */
 }
 
 .button-group button:hover {
     background-color: #555;
 }
+
+.text-aligned-with-button {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+}
+
